Adding CSS styles to client view

--- a/app/farmatec/src/styles/menu.css
+++ b/app/farmatec/src/styles/menu.css
@@ -1,8 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
+
 .index {
   text-align: center;
 }
 
-header {
+* {
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+
+#header {
   border: 1px;
   color: black;
 }
@@ -25,4 +32,58 @@ header ul li {
 header ul li .active {
   font-weight: blod;
   color: red;
+}
+
+.container {
+  width: 1000px;
+  margin: 20px auto;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+}
+
+.menu__list {
+  list-style-type: none;
+  padding: 0;
+  height: 100%;
+  margin: 0;
+  margin-right: 40px;
+}
+
+.menu__list-item {
+  display: inline-block;
+  height: 100%;
+  margin-right: 20px;
+}
+
+.menu {
+  background-color: white;
+  box-shadow: 0px 2px 24px 0px rgba(0, 0, 0, 0.15);
+  border-radius: 8px;
+  width: 752px;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 40px;
+  position: relative;
+}
+
+.menu__logo {
+  text-indent: -9999999px;
+  display: inline-block;
+  height: 100%;
+  width: 92px;
+  /*background-image: url(logo.png);*/
+  background-size: cover 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: 0;
+}
+
+.menu__right {
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
